--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -9,22 +9,25 @@
   become: yes
   become_user: superset
   shell: "fabmanager create-admin --app {{ superset_app }} --username {{ superset_username }} --firstname {{ superset_firstname }}  --lastname {{ superset_lastname }}  --email {{ superset_email }} --password {{ superset_password}}"
+  when: superset_install.changed
 
 - name: Prepare superset DB
   become: yes
   become_user: superset
   shell: superset db upgrade
+  when: superset_install.changed
 
 - name: Loading examples
   become: yes
   become_user: superset
   shell: superset load_examples
-  when: superset_load_examples
+  when: superset_load_examples and superset_install.changed
 
 - name: Init superset
   become: yes
   become_user: superset
   shell: superset init
+  when: superset_install.changed
 
 - name: Create superset systemd service
   template:
