--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,8 @@
 ---
 galaxy_info:
   role_name:
-  author: iroquoisorg
+  author: insight-infra
+#  author: iroquoisorg
   description: role for superset
   license: BSD
   min_ansible_version: 2.5.4 # tested on this version, might work on older versions
@@ -11,4 +12,3 @@ galaxy_info:
     - 16.04
     - 18.04
     - 20.04
-  galaxy_tags: []
