--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,7 @@
 ---
 galaxy_info:
   role_name:
-  author: insight-infra
-#  author: iroquoisorg
+  author: iroquoisorg
   description: role for superset
   license: BSD
   min_ansible_version: 2.5.4 # tested on this version, might work on older versions
