--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,17 +1,6 @@
-#- name: Install APT requirements
-#  apt:
-#    package: "{{ item }}"
-#  with_items:
-#    - build-essential
-#    - libssl-dev
-#    - libffi-dev
-#    - python-dev
-#    - python-pip
-#    - libsasl2-dev
-#    - libldap2-dev
-#    - python3.8-dev
+---
 
-- name: Install required packages
+- name: Install APT requirements
   apt:
     name: "{{ packages }}"
     force_apt_get: yes
@@ -22,28 +11,41 @@
       - build-essential
       - libssl-dev
       - libffi-dev
-      - python-dev
-      - python-pip
       - libsasl2-dev
       - libldap2-dev
-      - python3.8-dev
+      - python3-dev
+      - python3-pip
+      - python3-setuptools
+      - python-setuptools
 
-- name: Upgrade openSSL
-  shell: "python -m easy_install --upgrade pyOpenSSL"
-  changed_when: false
+#- name: Upgrade openSSL
+#  command: "python -m easy_install --upgrade pyOpenSSL"
+#  changed_when: false
 
-- name: install PIP requirements
+- name: Install pip packages
   pip:
-    name: psycopg2-binary
+    name: "{{ pippkgs }}"
+    executable: pip3
+    state: present
+  vars:
+    pippkgs:
+      - setuptools
+      - cryptography
+#      - werkzeug==0.16.1
+      - psycopg2-binary
+      - pyopenssl
+      - pip
+      - email_validator
 
-- name: self upgrade setuptools and pip
-  pip:
-    name: "{{ item }}"
-    state: latest
-  with_items:
-    - setuptools
-    - pip
-    - email_validator
+#- name: self upgrade setuptools and pip
+#  pip:
+#    name: "{{ item }}"
+#    executable: pip3
+#    state: latest
+#  with_items:
+#    - setuptools
+#    - pip
+#    - email_validator
 
 - name: Create user for superset
   user:
@@ -57,6 +59,12 @@
 
 - name: Install superset
   pip:
-    name: superset
+    name: apache-superset
     version: "{{ superset_version }}"
+    executable: pip3
   register: superset_install
+  notify:
+    - Create admin user
+    - Prepare superset DB
+    - Load examples
+    - Init superset
