--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,7 +7,7 @@ superset_email: email@example.com
 
 superset_app: superset
 superset_flask_secret_key: changeme
-superset_port: 8888
+superset_port: 8088
 superset_workers: 2
 superset_mapbox_api_key: changeme
 superset_secret_key: changeme
@@ -20,8 +20,12 @@ superset_service: /etc/systemd/system/superset.service
 superset_user: superset
 superset_group: superset
 
+superset_user_shell: /bin/bash # Change to '/bin/false' in production
+
+python_version: 3.6
 superset_path: /opt/superset
-superset_python_path: /usr/local/lib/python3.8
+superset_venv_path: /opt/superset/env
+superset_python_path: "{{ superset_venv_path }}/bin/python  {{ superset_venv_path }}/bin/superset"
 
 superset_postgres_db_host: localhost
 superset_postgres_db_port: 5432
