--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,6 +1,31 @@
 ---
 
+- name: Create user for superset
+  user:
+    name: "{{ superset_user }}"
+    home: "{{ superset_path }}"
+    shell: /bin/bash
+
+- name: Create superset group.
+  group:
+    name: "{{ superset_group }}"
+
+- name: Add ppa for python
+  become: true
+  apt_repository:
+    repo: ppa:deadsnakes/ppa
+    state: present
+
+- name: Update and upgrade apt packages
+  become: true
+  apt:
+    update_cache: yes
+    upgrade: "yes" # Needs to be quoted
+    force_apt_get: yes
+    cache_valid_time: 86400 #One day
+
 - name: Install APT requirements
+  become: true
   apt:
     name: "{{ packages }}"
     force_apt_get: yes
@@ -9,62 +34,88 @@
   vars:
     packages:
       - build-essential
+      - software-properties-common
       - libssl-dev
       - libffi-dev
       - libsasl2-dev
       - libldap2-dev
-      - python3-dev
-      - python3-pip
-      - python3-setuptools
-      - python-setuptools
+      - python3.6-dev
+      - python3-venv
+      - python-pip
 
-#- name: Upgrade openSSL
-#  command: "python -m easy_install --upgrade pyOpenSSL"
-#  changed_when: false
-
-- name: Install pip packages
+- name: Install pip
+  become_user: superset
   pip:
     name: "{{ pippkgs }}"
-    executable: pip3
-    state: present
+    state: latest
+    virtualenv: "{{ superset_venv_path }}"
+    virtualenv_command: /usr/bin/python3.6 -m venv
   vars:
     pippkgs:
-      - setuptools
-      - cryptography
-#      - werkzeug==0.16.1
-      - psycopg2-binary
-      - pyopenssl
       - pip
-      - email_validator
+      - setuptools
 
-#- name: self upgrade setuptools and pip
+- name: Install pip packages
+  become_user: superset
+  pip:
+    name: "{{ pippkgs }}"
+    state: latest
+    virtualenv: "{{ superset_venv_path }}"
+    virtualenv_command: /usr/bin/python3.6 -m venv
+  vars:
+    pippkgs:
+      - pip
+      - setuptools
+#      - cryptography
+#      - psycopg2-binary
+#      - pyopenssl
+#      - email_validator
+#      - colorama==0.3.9
+
+#- name: Install superset
 #  pip:
-#    name: "{{ item }}"
-#    executable: pip3
-#    state: latest
-#  with_items:
-#    - setuptools
-#    - pip
-#    - email_validator
+#    name: apache-superset
+#    executable: pip
+#    virtualenv: "{{ superset_venv_path }}"
+#    virtualenv_command: /usr/bin/python3.6 -m venv
 
-- name: Create user for superset
-  user:
-    name: "{{ superset_user }}"
-    home: "{{ superset_path }}"
-    shell: /bin/false
-
-- name: Create superset group.
-  group:
-    name: "{{ superset_group }}"
+#- name: Install superset
+#  shell:
+#    cmd: ". {{superset_venv_path}}/bin/activate && pip install --upgrade setuptools pip && pip install apache-superset"  # noqa
 
 - name: Install superset
-  pip:
-    name: apache-superset
-    version: "{{ superset_version }}"
-    executable: pip3
-  register: superset_install
-  notify:
-    - Create admin user
-    - Prepare superset DB
-    - Load examples
-    - Init superset
+  shell:
+    cmd: |
+      . {{superset_venv_path}}/bin/activate
+      pip install apache-superset
+
+#- name: Install superset
+#  shell:
+#    cmd: ". {{superset_venv_path}}/bin/activate && pip uninstall apache-superset && pip uninstall apache-superset"  # noqa
+
+- name: Create admin user
+  become_user: superset
+  command: >
+    {{ superset_python_path }} fab create-admin
+      --username "{{ superset_username }}"
+      --firstname "{{ superset_firstname }}"
+      --lastname "{{ superset_lastname }}"
+      --email "{{ superset_email }}"
+      --password "{{ superset_password }}"
+  
+- name: Prepare superset DB
+  become: true
+  become_user: "{{ superset_user }}"
+  command: "{{ superset_python_path }} db upgrade"
+
+- name: Load examples
+  become: true
+  become_user: superset
+  command: "{{ superset_python_path }} load_examples"
+  when: superset_load_examples
+
+- name: Init superset
+  become: true
+  become_user: superset
+  command: "{{ superset_python_path }} init"
+
