--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,4 @@
-superset_version: 0.36.0
+superset_version: 0.37.0
 superset_username: user
 superset_password: password
 superset_firstname: John
@@ -29,9 +29,9 @@ superset_python_path: "{{ superset_venv_path }}/bin/python  {{ superset_venv_pat
 
 superset_postgres_db_host: localhost
 superset_postgres_db_port: 5432
-superset_postgres_db_name: superset
-superset_postgres_db_user: superset
-superset_postgres_db_pass: changeme
+superset_postgres_db_username: superset
+superset_database: postgres
+superset_postgres_db_password: changeme
 
 superset_load_examples: false
 
