--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,7 +5,7 @@ galaxy_info:
 #  author: iroquoisorg
   description: role for superset
   license: BSD
-  min_ansible_version: 2.5.4 # tested on this version, might work on older versions
+  min_ansible_version: 2.9.0
   platforms:
   - name: Ubuntu
     versions:
