--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -7,3 +7,8 @@
     state: restarted
     enabled: yes
 
+- name: restart nginx
+  service:
+    name: superset
+    state: restarted
+    enabled: yes
