removing postgres role

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,9 +17,9 @@
     name: geerlingguy.redis
   when: enable_superset_redis
 
-- include_role:
-    name: geerlingguy.postgresql
-  when: enable_superset_local_postgres
+#- include_role:
+#    name: geerlingguy.postgresql
+#  when: enable_superset_local_postgres
 
 - include: common.yml
 
